Safety
Added check for info length, edited labels to be non-static, and more.